--- a/NEWS
+++ b/NEWS
@@ -5,10 +5,13 @@
 
   The following macros have been added: AX_CXX_HELPFUL_TERMINATE_HANDLER.
 
+  AX_CHECK_ICU has been extended to support icu-specific CPPFLAGS.
+
+  AX_BOOST_BASE has been extended to support an
+  ACTION-IF-FOUND/ACTION-IF-NOT-FOUND-style API.
+
   AX_C_IFDEF has been deprecated, because standard Autoconf contains a macro,
   AC_CHECK_DECL, which replaces its functionality.
-
-  AX_CHECK_ICU has been extended to support icu-specific CPPFLAGS.
 
   AX_C_PRINTF_THSEP has been deprecated because of technical flaws. See
   http://savannah.nongnu.org/patch/?6848 for further details.
