AX_PTHREAD: minor changes to the AC_TRY_LINK command so that the code compiles when -Wall and -Werror are set

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,8 @@
   environment and extended to support an
   ACTION-IF-FOUND/ACTION-IF-NOT-FOUND-style API.
 
+  AX_PTHREAD has been updated to succeed when compiling with -Wall and -Werror.
+
   AX_C_IFDEF has been deprecated, because the standard Autoconf macro
   AC_CHECK_DECL provides the same functionality.
 
