AX_CXX_VERBOSE_TERMINATE_HANDLER: replaced by a more generic implementation that's not limited to GNU libstdc++
Submitted by Kevin Locke in <https://savannah.nongnu.org/patch/?7005>.

--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,8 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
-  The following macros have been added: AX_CXX_HELPFUL_TERMINATE_HANDLER.
+  AX_CXX_VERBOSE_TERMINATE_HANDLER has been generalized to support
+  architectures other than GNU libstdc++.
 
   AX_CHECK_ICU has been extended to support icu-specific CPPFLAGS.
 
