--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,8 @@
 
   AX_RESTORE_FLAGS and AX_SAVE_FLAGS have been added.
 
+  AX_SYS_LARGEFILE_SENSITIVE has improved support for x86_64 hosts.
+
 * Noteworthy changes in release 2009.12.16 (2009-12-16) [alpha]
 
   All macros that used a prefix other than AX_ -- or no prefix at all -- have
