--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
 #+TITLE: Autoconf Archive TODO                 -*- mode:org;fill-column:79; -*-
 
-* TODO Improve the web site's front page
 * TODO Improve submission guide lines on the web site
-** Macros must use an AX_ prefix.
 ** Patch submissions should put the original authors on Cc.
 
    Everyone is welcome to submit patches, bug reports, or suggestions to the
@@ -53,12 +51,13 @@
   * [ ] sc_prohibit_magic_number_exit
   * [ ] sc_copyright_check
 
-* TODO Generate serial lines
+* TODO Generate serial lines automatically
 
   The script [[file:set-serial.sh][set-serial.sh]] uses the git repository to determine an appropriate
   serial number (i.e. the number of commits that have occurred) and patches
   that number into the m4 file. The solution seems to work nicely, but it isn't
   integrated into the build process yet.
+
 * TODO Don't repeat license texts in Texinfo for every macro
 
   The Texinfo documentation has a section "license" for every macro that
