--- a/doc/introduction.texi
+++ b/doc/introduction.texi
@@ -1,12 +1,18 @@
-The Autoconf Archive is a collection of more than 450 freely re-usable macros
-for @uref{http://www.gnu.org/software/autoconf,GNU Autoconf} that have been
-contributed by friendly supporters of the cause from all over the Internet.
-
-The term ``free'' means two things in this context: (1) all macros distributed
-by the Archive can be used free of charge and (2) their use imposes no
-restrictions whatsoever on the licensing of the generated @file{configure}
-script, i.e. it is possible to use those macros in @file{configure} scripts
-that are meant for non-free software.
+The Autoconf Archive is a collection of more than 450 macros for
+@uref{http://www.gnu.org/software/autoconf,GNU Autoconf} that have been
+contributed as free software by friendly supporters of the cause from all over
+the Internet. Every single one of those macros can be re-used without imposing
+any restrictions whatsoever on the licensing of the generated @file{configure}
+script. In particular, it is possible to use all those macros in
+@file{configure} scripts that are meant for non-free software. This policy is
+unusual for a Free Software Foundation project. The FSF firmly believes that
+software ought to be free, and software licenses like the GPL are specifically
+designed to ensure that derivative work based on free software must be free as
+well. In case of Autoconf, however, an exception has been made, because Autoconf
+is at such a pivotal position in the software development tool chain that the
+benefits from having this tool available as widely as possible outweigh the
+disadvantage that some authors may choose to use it, too, for proprietary
+software.
 
 This official web site of this project is located at
 @uref{http://savannah.nongnu.org/projects/autoconf-archive/}. All available
@@ -15,5 +21,3 @@ information concerning this project is referenced from there.
 If you have questions, suggestions, are any other feedback that you'd like to
 share, then please don't hesitate to contact the Archive maintainers at
 @email{autoconf-archive-maintainers@@nongnu.org}.
-
-
