--- a/doc/autoconf-archive.texi
+++ b/doc/autoconf-archive.texi
@@ -13,17 +13,15 @@
 This manual is for Autoconf Archive version @value{VERSION}, a collection of
 freely re-usable Autoconf macros.
 
-Compilation Copyright @copyright{} 2010 Autoconf Archive Maintainers
+Copyright @copyright{} 2010 Autoconf Archive Maintainers
 @email{autoconf-archive-maintainers@@nongnu.org}
 
-This compilation is free software: you can redistribute it and/or modify it
-under the terms of the GNU General Public License as published by the Free
-Software Foundation, either version 3 of the License, or (at your option) any
-later version.
-
-This compilation is distributed in the hope that it will be useful, but WITHOUT
-ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
-FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.3 or
+any later version published by the Free Software Foundation; with no
+Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.  A
+copy of the license is included in the section entitled ``GNU Free
+Documentation License''.
 @end copying
 
 @dircategory Software development
@@ -50,10 +48,11 @@ FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 @end ifnottex
 
 @menu
-* Introduction::
-* Downloads::
-* How to contribute::
-* The Macros::
+* Introduction::                        Project Synopsis, home page links, etc.
+* Downloads::                           How to find git repository and release tarballs.
+* How to contribute::                   Submission Guidelines.
+* The Macros::                          Alphabetic index of all macros.
+* GNU Free Documentation License::      Copying and sharing this manual.
 @end menu
 
 @node Introduction
@@ -71,5 +70,9 @@ FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 @node The Macros
 @chapter The Macros
 @include all-macros.texi
+
+@node GNU Free Documentation License
+@appendix GNU Free Documentation License
+@include fdl-1.3.texi
 
 @bye
