--- a/README
+++ b/README
@@ -1,15 +1,20 @@
 Autoconf Archive
 ================
 
-The Autoconf Archive is a collection of more than 450 freely re-usable macros
-for `GNU Autoconf <http://www.gnu.org/software/autoconf>`_ that have been
-contributed by friendly supporters of the cause from all over the Internet.
-
-The term "free" means two things in this context: (1) all macros distributed by
-the Archive can be used free of charge and (2) their use imposes no restrictions
-whatsoever on the licensing of the generated `configure` script, i.e. it is
-possible to use those macros in `configure` scripts that are meant for non-free
-software.
+The Autoconf Archive is a collection of more than 450 macros for `GNU Autoconf
+<http://www.gnu.org/software/autoconf>`_ that have been contributed as free
+software by friendly supporters of the cause from all over the Internet. Every
+single one of those macros can be re-used without imposing any restrictions
+whatsoever on the licensing of the generated `configure` script. In particular,
+it is possible to use all those macros in `configure` scripts that are meant for
+non-free software. This policy is unusual for a Free Software Foundation
+project. The FSF firmly believes that software ought to be free, and software
+licenses like the GPL are specifically designed to ensure that derivative work
+based on free software must be free as well. In case of Autoconf, however, an
+exception has been made, because Autoconf is at such a pivotal position in the
+software development tool chain that the benefits from having this tool
+available as widely as possible outweigh the disadvantage that some authors may
+choose to use it, too, for proprietary software.
 
 The best place to start exploring the Archive is the `on-line documentation
 <http://www.nongnu.org/autoconf-archive/>`_. There is also the `Autoconf Archive
