--- a/TODO
+++ b/TODO
@@ -1,4 +1,19 @@
 #+TITLE: Autoconf Archive TODO                 -*- mode:org;fill-column:79; -*-
+#
+# Copyright (c) 2010 Free Software Foundation, Inc.
+#
+# Copying and distribution of this file, with or without modification, are
+# permitted in any medium without royalty provided the copyright notice
+# and this notice are preserved. This file is offered as-is, without any
+# warranty.
+
+* TODO Figure out a new link for the macro home pages.
+
+  GNU suggests http://www.gnu.org/software/autoconf-archive/macro-name.html as
+  the URL of choice for all pages, but that link is really quite long, i.e. 13
+  characters longer than, say http://autoconf-archive.gnu.org/macro-name.html,
+  would be. Even http://www.nongnu.org/autoconf-archive/macro-name.html, the
+  current choice, is 6 characters shorter than that.
 
 * TODO Improve submission guide lines on the web site
 ** Patch submissions should put the original authors on Cc.
@@ -68,15 +83,15 @@
 
   It would be desirable to have the license texts in the documentation *once*
   and to have every macro refer to the appropriate section.
-* TODO Add copyright notices to all files [1/3]
+* DONE Add copyright notices to all files [3/3]
 
   * [X] autoconf-archive.texi should say what its own (the documentation)
         copyright is in the @copying. Presumably GFDLv1.3+.
 
-  * [ ] small top-level files like NEWS, ChangeLog, TODO should have some kind
+  * [X] small top-level files like NEWS, ChangeLog, TODO should have some kind
         of notice, e.g., the all-permissive one.
 
-  * [ ] Makefile.am files should use the standard GPL notice, not just say
+  * [X] Makefile.am files should use the standard GPL notice, not just say
         "Licensed under the terms ...". That leaves it unclear as to what
         version of the GPL applies, and whether it is GPLvN-only vs.
         GPLvN-or-later.
