--- a/doc/introduction.texi
+++ b/doc/introduction.texi
@@ -1,4 +1,4 @@
-The Autoconf Archive is a collection of more than 450 macros for
+The GNU Autoconf Archive is a collection of more than 450 macros for
 @uref{http://www.gnu.org/software/autoconf,GNU Autoconf} that have been
 contributed as free software by friendly supporters of the cause from all over
 the Internet. Every single one of those macros can be re-used without imposing
@@ -15,9 +15,9 @@ disadvantage that some authors may choose to use it, too, for proprietary
 software.
 
 This official web site of this project is located at
-@uref{http://savannah.nongnu.org/projects/autoconf-archive/}. All available
-information concerning this project is referenced from there.
+@uref{http://www.gnu.org/software/autoconf-archive/}. All available information
+concerning this project is referenced from there.
 
 If you have questions, suggestions, are any other feedback that you'd like to
 share, then please don't hesitate to contact the Archive maintainers at
-@email{autoconf-archive-maintainers@@nongnu.org}.
+@email{autoconf-archive-maintainers@@gnu.org}.
